[project]
name = "ds-3-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evalscope[perf]>=1.0.1",
    "sglang[all]==0.5.1.post3",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
